Update and rename brooklyn.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		 <title>Plantilla 2</title>
 	</head>
 	<body>
-		<header><img src="https://wallpapercave.com/wp/wp5063339.png" width="256" height="144"> <nav>
+		<header> <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Series</a></li>
